test/tests/stages/13_floating-point_numbers/valid/floating_expressions/loop_controlling_expression.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: a
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 0
                      None: 
                    None: 
                  Int: 
                  None: 
            CS: 
              CFor: 
                TIdentifier: (null)
                CInitDecl: 
                  CVariableDeclaration: 
                    TIdentifier: d
                    CSingleInit: 
                      CConstant: 
                        CConstDouble: 
                          TDouble: 100.000000
                        None: 
                      None: 
                    Double: 
                    None: 
                CBinary: 
                  CGreaterThan: 
                  CVar: 
                    TIdentifier: d
                    None: 
                  CConstant: 
                    CConstDouble: 
                      TDouble: 0.000000
                    None: 
                  None: 
                CAssignment: 
                  None: 
                  CVar: 
                    TIdentifier: d
                    None: 
                  CBinary: 
                    CSubtract: 
                    CVar: 
                      TIdentifier: d
                      None: 
                    CConstant: 
                      CConstDouble: 
                        TDouble: 1.000000
                      None: 
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CExpression: 
                          CAssignment: 
                            None: 
                            CVar: 
                              TIdentifier: a
                              None: 
                            CBinary: 
                              CAdd: 
                              CVar: 
                                TIdentifier: a
                                None: 
                              CConstant: 
                                CConstInt: 
                                  TInt: 1
                                None: 
                              None: 
                            None: 
            CS: 
              CReturn: 
                CVar: 
                  TIdentifier: a
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
