test/tests/stages/13_floating-point_numbers/invalid_types/extra_credit/compound_mod.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: d
                  CSingleInit: 
                    CConstant: 
                      CConstDouble: 
                        TDouble: 5.000000
                      None: 
                    None: 
                  Double: 
                  None: 
            CS: 
              CExpression: 
                CAssignment: 
                  None: 
                  None: 
                  CBinary: 
                    CRemainder: 
                    CVar: 
                      TIdentifier: d
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 2
                      None: 
                    None: 
                  None: 
            CS: 
              CReturn: 
                CCast: 
                  CVar: 
                    TIdentifier: d
                    None: 
                  Int: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
